<resources>
    <string name="app_name">KRYLOV_IS_07_30102025</string>
    <string name="button_string">Button</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="_sum">+</string>
    <string name="_minus">-</string>
    <string name="_mult">*</string>
    <string name="_dev">/</string>
    <string name="_equal">=</string>
    <string name="_clear">AC</string>
</resources>